--- a/src/app/pages/home/pages/home/home.component.scss
+++ b/src/app/pages/home/pages/home/home.component.scss
@@ -81,6 +81,7 @@
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
+  height: 100vh;
   //background-attachment: fixed;
 
   #home-bg-overlay {
@@ -88,6 +89,7 @@
     width: 100%;
     background-color: #000;
     opacity: 70%;
+    top: 0;
   }
 
 
