--- a/src/app/pages/home/pages/home/home.component.html
+++ b/src/app/pages/home/pages/home/home.component.html
@@ -27,10 +27,10 @@
   <section>
     <div class='content-div' fxLayout='column' fxFlexFill>
       <section id='home'>
-        <div id='home-content'>
-          <div id="home-bg-overlay" class="flex-center">
-          </div>
-          <div style="position: absolute" [ngStyle.lt-md]="{'top' : 0}">
+        <div id='home-content' [style]="isMobile ? {'height': 'calc(100vh - 100px)'} : {'height': '100vh'}">
+          <div id="home-bg-overlay"
+               class="flex-center"></div>
+          <div style="position: absolute; height: calc(100vh - 100px); overflow: auto" class="flex-center">
             <router-outlet></router-outlet>
           </div>
         </div>
