--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,4 +3,8 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   scroll-behavior: smooth;
+  a {
+    color: #8c9597;
+    text-decoration: none;
+  }
 }
