--- a/src/app/pages/home/components/about-me/about-me.component.html
+++ b/src/app/pages/home/components/about-me/about-me.component.html
@@ -1,51 +1,14 @@
-<div>
-  <div class="container">
+<div style="height: 100vh; overflow: auto">
+  <div class="container" [style]="isMobile ? {'padding-top': '0px'} : {'padding-top' : '150px'}">
     <div class="about-me" fxLayout="row wrap" fxLayout.lt-sm="column wrap" fxLayoutGap="1rem">
-      <div fxFlex="250px" id="left-content" *ngIf="!isMobile">
-        <mat-card style="padding: 0; border-radius: 10px">
-          <div id="personal-header-info">
-            <div id="avatar" >
-
-              <img class="gradient-border" height="100%" width="100%" src="/assets/img/avatar.png" alt=""/>
-
-            </div>
-            <div id="personal-name">
-              <p><strong>Truong</strong> Dao Xuan</p>
-            </div>
-          </div>
-          <div id="personal-info">
-            <div class="personal-info-item">
-              <mat-icon>maps</mat-icon>
-              <label>May 14, 1996</label>
-            </div>
-            <div class="personal-info-item">
-              <mat-icon>maps</mat-icon>
-              <label>May 14, 1996</label>
-            </div>
-            <div class="personal-info-item">
-              <mat-icon>maps</mat-icon>
-              <label>May 14, 1996</label>
-            </div>
-            <div class="personal-info-item">
-              <mat-icon>maps</mat-icon>
-              <label>May 14, 1996</label>
-            </div>
-            <button mat-stroked-button>Download CV</button>
-          </div>
-        </mat-card>
-        <svg class="svg-defs">
-          <clipPath id="avatar-box">
-            <path
-              d="M1.85379 38.4859C2.9221 18.6653 18.6653 2.92275 38.4858 1.85453 56.0986.905299 77.2792 0 94 0c16.721 0 37.901.905299 55.514 1.85453 19.821 1.06822 35.564 16.81077 36.632 36.63137C187.095 56.0922 188 77.267 188 94c0 16.733-.905 37.908-1.854 55.514-1.068 19.821-16.811 35.563-36.632 36.631C131.901 187.095 110.721 188 94 188c-16.7208 0-37.9014-.905-55.5142-1.855-19.8205-1.068-35.5637-16.81-36.63201-36.631C.904831 131.908 0 110.733 0 94c0-16.733.904831-37.9078 1.85379-55.5141z"></path>
-          </clipPath>
-        </svg>
-      </div>
+      <app-personal-info [isMobile]="isMobile"></app-personal-info>
       <div fxFlex>
         <mat-card id="right-content">
           <section id="about" class="container">
             <div class="flex-center">
               <h5>About Me</h5>
-              <div style="width: 70%; text-align: center">Experienced Java Web Developer with a demonstrated history of
+              <div style="width: 70%; text-align: center">Experienced Java Web Development with a demonstrated history
+                of
                 working in the computer software industry. Skilled in Spring Framework, Angular, .NetCore, etc.
               </div>
               <div id="skills" fxLayout="row wrap" fxLayout.lt-md="column">
