--- a/src/app/pages/home/components/about-me/about-me.component.scss
+++ b/src/app/pages/home/components/about-me/about-me.component.scss
@@ -44,7 +44,7 @@
 
 
   #personal-header-info {
-
+    padding-bottom: 2rem;
     #avatar {
       display: flex;
       justify-content: center;
@@ -72,8 +72,8 @@
     .personal-info-item {
       display: flex;
       align-items: center;
-      padding: 0.5rem 0;
-
+      padding: 0.5rem 0.5rem;
+      font-size: smaller;
       label {
         padding-left: 0.5rem;
       }
