--- a/src/app/pages/home/pages/home/home.component.html
+++ b/src/app/pages/home/pages/home/home.component.html
@@ -7,14 +7,15 @@
       <div class='container topbar'>
         <div>
           <a mat-button class='logo' href='/'>
-            RyanX
+            Truong
           </a>
         </div>
         <div class='spacer'></div>
         <div class='top-menu' fxLayout='row'>
           <ng-container *ngIf='!isMobile'>
             <ng-container *ngFor='let path of pathLists'>
-              <a mat-button style='margin-right: 1rem' [routerLink]="[path.url]">{{path.pathName}}</a>
+              <a *ngIf="path?.href == null" mat-button style='margin-right: 1rem' [routerLink]="[path.url]">{{path.pathName}}</a>
+              <a *ngIf="path?.href != null" mat-button style='margin-right: 1rem' href="{{path.href}}">{{path.pathName}}</a>
             </ng-container>
           </ng-container>
           <button mat-button (click)='toggleSideNav()' *ngIf='isMobile'>
@@ -27,154 +28,14 @@
   <section>
     <div class='content-div' fxLayout='column' fxFlexFill>
       <section id='home'>
-        <div id='home-content' [style]="isMobile ? {'height': 'calc(100vh - 100px)'} : {'height': '100vh'}">
+        <div id='home-content'>
           <div id="home-bg-overlay"
                class="flex-center"></div>
-          <div style="position: absolute; height: calc(100vh - 100px); overflow: auto" class="flex-center">
+          <div style="position: absolute; height: 100%; overflow: auto" class="flex-center-column">
             <router-outlet></router-outlet>
           </div>
         </div>
       </section>
-
-      <!--      <section id="about" class="container">-->
-      <!--        <h5>About Me</h5>-->
-      <!--        <div style="width: 70%; text-align: center">Experienced Java Web Developer with a demonstrated history of-->
-      <!--          working in the computer software industry. Skilled in Spring Framework, Angular, .NetCore, etc.-->
-      <!--        </div>-->
-      <!--        <div id="skills" fxLayout="row wrap" fxLayout.lt-md="column">-->
-      <!--          <ng-container *ngFor="let skill of skillLists">-->
-      <!--            <div fxFlex="30%" class="skill-item">-->
-      <!--              <div style="display: flex;">-->
-      <!--                <label>{{skill.name}}</label>-->
-      <!--                <div class="spacer"></div>-->
-      <!--                <label style="color: #3f51b5">{{skill.value}}%</label>-->
-      <!--              </div>-->
-      <!--              <mat-progress-bar class="green-progress" mode="determinate" [value]="skill.value"></mat-progress-bar>-->
-      <!--            </div>-->
-      <!--          </ng-container>-->
-      <!--        </div>-->
-      <!--      </section>-->
-
-      <!--      <section id="certs">-->
-      <!--        <div class="container flex-center">-->
-      <!--          <h5>Certificates</h5>-->
-      <!--          <div id="cert" fxLayout="row wrap" fxLayout.lt-md="column">-->
-      <!--            <div style="height: 100px">-->
-      <!--              <img style="height: 100%;" src="/assets/img/Oracle_Java_SE_11_Developer_600x600__002_.png" alt="">-->
-      <!--            </div>-->
-      <!--            <a href="https://www.credly.com/badges/f15b30cc-f9e8-4f40-9753-69eca9da1d4d/linked_in">Oracle Certified-->
-      <!--              Professional: Java SE 11 Developer</a>-->
-      <!--          </div>-->
-      <!--        </div>-->
-      <!--      </section>-->
-
-      <!--      <section id="works" class="container">-->
-      <!--        <h5>Works</h5>-->
-      <!--        <div style="width: 70%; text-align: center">-->
-      <!--          Starting a new day, I love website programming, meeting clients,....-->
-      <!--        </div>-->
-      <!--        <div id="work" fxLayout="row wrap" fxLayout.lt-md="column">-->
-      <!--          <div fxFlex="30%" class="work-item">-->
-      <!--            <div-->
-      <!--              style="display: flex; flex-direction: column; align-items: center; color: rgb(241, 139, 109); font-weight: bold">-->
-      <!--              <mat-icon>code</mat-icon>-->
-      <!--              <label style="text-align: center;">WEB DEVELOPMENT</label>-->
-      <!--            </div>-->
-      <!--            <p style="text-align: center;">-->
-      <!--              My team design and program website and mobile application according to customer requirements.-->
-      <!--            </p>-->
-      <!--          </div>-->
-      <!--          <div fxFlex="30%" class="work-item">-->
-      <!--            <div-->
-      <!--              style="display: flex; flex-direction: column; align-items: center; color: rgb(241, 210, 4); font-weight: bold">-->
-      <!--              <mat-icon>code</mat-icon>-->
-      <!--              <label style="text-align: center;">WEB DESIGN</label>-->
-      <!--            </div>-->
-      <!--            <p style="text-align: center;">-->
-      <!--              My team design and program website and mobile application according to customer requirements.-->
-      <!--            </p>-->
-      <!--          </div>-->
-      <!--          <div fxFlex="30%" class="work-item">-->
-      <!--            <div-->
-      <!--              style="display: flex; flex-direction: column; align-items: center; color: rgb(106, 77, 138); font-weight: bold">-->
-      <!--              <mat-icon>code</mat-icon>-->
-      <!--              <label style="text-align: center;">CONTENT CREATION</label>-->
-      <!--            </div>-->
-      <!--            <p style="text-align: center;">-->
-      <!--              Content creation for me is sharing personal perspective on programming work.-->
-      <!--            </p>-->
-      <!--          </div>-->
-      <!--        </div>-->
-      <!--      </section>-->
-
-      <!--      <section id="last-news">-->
-      <!--        <div class="container flex-center">-->
-      <!--          <h5 style="color: #FFF">Latest blogs</h5>-->
-      <!--          <p>If you are interested in life of a coder, take a sneak peek at our blog!</p>-->
-      <!--          <a href="https://vcoderlog.com/" mat-button>-->
-      <!--            <mat-icon>chevron_right</mat-icon>-->
-      <!--            See blog-->
-      <!--          </a>-->
-      <!--          <div id="new" fxLayout="row wrap" fxLayout.lt-md="column">-->
-      <!--            <div fxFlex="30%" class="new-item">-->
-      <!--              <mat-card>-->
-      <!--                <div class="new-image">-->
-      <!--                  <img mat-card-image-->
-      <!--                       src="https://vcoderlog.com/static/img/wp-content/uploads/2020/02/git-flow-nvie-761x1024.png">-->
-      <!--                </div>-->
-      <!--                <mat-card-content>-->
-      <!--                  <h5>Gitflow workflow trong 30 phút Cách sử dụng Git trong dự án</h5>-->
-      <!--                  <p class="text-justify">-->
-      <!--                    Mô hình phân nhánh từ Vincent Driessen’s A successful Git branching model - một mô hình kinh điển - -->
-      <!--                    được áp dụng bởi hầu hết các công ty công nghệ hàng đầu hiện nay. Bài viết này sẽ chia sẻ những kiến-->
-      <!--                    thức chung nhất về Git Flow cũng như áp dụng GitFlow trong các dự án.-->
-      <!--                  </p>-->
-      <!--                </mat-card-content>-->
-      <!--                <mat-card-actions>-->
-      <!--                  <button mat-button>-->
-      <!--                    <mat-icon>chevron_right</mat-icon>-->
-      <!--                    Read more-->
-      <!--                  </button>-->
-      <!--                </mat-card-actions>-->
-      <!--              </mat-card>-->
-      <!--            </div>-->
-      <!--          </div>-->
-      <!--        </div>-->
-      <!--      </section>-->
-
-      <!--      <footer class='page-footer'>-->
-      <!--        <div class='container'>-->
-      <!--          <div class='footer-content'>-->
-      <!--            <div fxLayout='row' fxLayout.lt-sm='column'>-->
-      <!--              <div fxFlex='40%' class='footer-content-info'>-->
-      <!--                <h5>Vài lời về tôi</h5>-->
-      <!--                <p>Với tôi chia sẻ kiến thức là cách học tập hiệu quả nhất. vCoderLog là blog chia sẻ những kiến thức-->
-      <!--                  lập trình, chuyện linh tinh xoay quanh công việc code dạo... Chia sẻ góc nhìn của bản thân về cuộc-->
-      <!--                  sống, công việc lập trình cho cộng đồng...</p>-->
-      <!--              </div>-->
-      <!--              <div fxFlex='60%' class='footer-links' fxLayout.lt-sm='column'>-->
-      <!--                <div class='footer-link' fxFlex='1/3'>-->
-      <!--                  <h5>Links</h5>-->
-
-      <!--                </div>-->
-      <!--                <div class='footer-link' fxFlex='1/3'>-->
-      <!--                  <h5>Bạn bè tôi</h5>-->
-      <!--                  <div>-->
-      <!--                  </div>-->
-      <!--                </div>-->
-      <!--                <div class='footer-link' fxFlex='1/3'>-->
-      <!--                  <h5>Web tôi thích </h5>-->
-      <!--                  <div>-->
-      <!--                  </div>-->
-      <!--                </div>-->
-      <!--              </div>-->
-      <!--            </div>-->
-      <!--          </div>-->
-      <!--          <div class='footer-copyright'>-->
-      <!--            <span>Copyright © 2021 All rights reserved - By Truong Dao Xuan. Version - {{url.version}}</span>-->
-      <!--          </div>-->
-      <!--        </div>-->
-      <!--      </footer>-->
     </div>
   </section>
 </div>
