--- a/src/app/pages/home/pages/home/home.component.scss
+++ b/src/app/pages/home/pages/home/home.component.scss
@@ -77,11 +77,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  //justify-content: center;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  height: 100vh;
+  height: 100%;
+  overflow: auto;
   //background-attachment: fixed;
 
   #home-bg-overlay {
@@ -146,7 +147,7 @@
   }
 }
 
-#works {
+#contacts {
   padding: 2rem 0;
   color: #8c9597;
   display: flex;
