--- a/src/styles.scss
+++ b/src/styles.scss
@@ -147,6 +147,12 @@ p {
   align-items: center;
 }
 
+.flex-center-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .text-justify {
   text-align: justify;
   text-justify: inter-word
