--- a/src/app/core/componenets/header/header.component.html
+++ b/src/app/core/componenets/header/header.component.html
@@ -4,7 +4,7 @@
       <div class='container topbar'>
         <div>
           <a mat-button class='logo' href='/'>
-            <img style='height: 40px;' src='assets/img/logo_landing_page.png'>
+            Truong
           </a>
         </div>
         <div class='spacer'></div>
