Fix issue scroll

--- a/src/app/pages/home/components/intro/intro.component.html
+++ b/src/app/pages/home/components/intro/intro.component.html
@@ -1,4 +1,4 @@
-<div class="flex-center" style="height: 100vh">
+<div class="flex-center" style="height: 100vh; overflow: hidden">
   <div id="home-items">
     <p>Hello & Welcome</p>
     <p style="white-space: break-spaces; line-height: 3rem">{{typewriterDisplay}}<span
